hcc/tests/conform/errors/sema/break_outside_loop.hc
//@ error: `break` outside of a loop or switch
#include <stdlib.hh>
U0 Main()
{
  break;
}
